# cloud-reporting-pipeline

./: .gitignore  pyproject.toml
container/: .env  Containerfile  base.yml  dev.yml
container/database/: .env
container/database/migrations/: 00__setup.sql
container/migrator/: .env  migrate.py  pyproject.toml
docker/: base.yml  deploy.yml  dev.yml  reports.dockerfile
docker/pgsql/: Dockerfile
entrypoints/: database.py  main.py
lib/environment/: __init__.py  database.py
pipeline/sources/: __init__.py  sql.py
run/: main.py
