[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Ben Lewington <ben.lewington91@ntlworld.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "0.20.15"

[tool.poetry.group.sqlalchemy.dependencies]
sqlalchemy = "^2.0.28"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
